# ntasker

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  app.py  babel.cfg  lifespan_test.py  migrate_todo.py  pyproject.toml  smoke_test.py
.github/workflows/: publish.yml
docs/: agents.md  claude-runs.md  kanban.md  live-updates.md  service.md
src/ntasker/: __init__.py  __main__.py  agents.py  app.py  assets.py  claude_assets.py  claude_runner.py  cli.py  db.py  i18n.py  middleware.py  paths.py  projects.py  service.py  settings.py  updates.py
src/ntasker/claude_assets/command/: _ntasker_loader.py  task.generic.md.template  task.md.template
src/ntasker/claude_assets/skill/: SKILL.md
src/ntasker/locale/: ntasker.pot
src/ntasker/locale/de/LC_MESSAGES/: ntasker.mo  ntasker.po
src/ntasker/static/: app.js  info.js  style.css  tags.js  topnav.js
src/ntasker/templates/: _topnav.html  index.html  info.html  settings.html  tags.html
static/: app.js
templates/: index.html
