[project]
name = "nerdocs-tracker"
version = "0.3.3"
description = "Lightweight local task tracker for the nerdocs HQ. Single-user, FastAPI + SQLite."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
