[project]
name = "ntasker"
version = "1.1.0"
description = "Lightweight local task tracker. Single-user, FastAPI + SQLite, Tabler.io UI."
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.0",
    "platformdirs>=4.0",
]

[project.scripts]
ntasker = "ntasker.cli:main"

[project.urls]
Homepage = "https://gitlab.com/nerdocs/ntasker"
Source = "https://gitlab.com/nerdocs/ntasker"
Issues = "https://gitlab.com/nerdocs/ntasker/-/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ntasker"]

[tool.hatch.build.targets.wheel.force-include]
# Ship the Claude Code skill + slash-command template inside the wheel so
# ``importlib.resources`` can read them at runtime regardless of install mode
# (sdist, wheel, editable). Hatchling already includes ``.py`` files of the
# package; ``.md`` / ``.template`` need to be force-included.
"src/ntasker/claude_assets" = "ntasker/claude_assets"
