[project]
name = "ntasker"
version = "2.13.0"
description = "Lightweight local task tracker. Single-user, FastAPI + SQLite, Tabler.io UI."
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.0",
    "platformdirs>=4.0",
    # ``httpx`` is used by ``ntasker assets fetch`` to download vendor
    # assets into the user-data dir. Runtime dep (not dev-only) since
    # the CLI ships in every install.
    "httpx>=0.28",
]

[project.scripts]
ntasker = "ntasker.cli:main"

[project.urls]
Homepage = "https://github.com/nerdocs/ntasker"
Source = "https://github.com/nerdocs/ntasker"
Issues = "https://github.com/nerdocs/ntasker/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20",
    # Used for `pybabel extract / init / update / compile` -- see Makefile.
    # Runtime translation uses the stdlib ``gettext`` only; Babel is dev-only.
    "babel>=2.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ntasker"]
# Default Hatchling behaviour already ships every file under src/ntasker/,
# including ``locale/<lang>/LC_MESSAGES/ntasker.{po,mo}`` and ``ntasker.pot``.
# Listed explicitly only for visibility -- no force-include trick (lesson
# learned in v1.2.2/v1.2.3: force-include duplicates files in the wheel).
